' Generated by UML Generator
' Encoded: rLbPRnit47xtho0Qe5XN1soZGG4X3Qf8ShA1PBkItBGD0eFUfINMk-IMvFfeclps3haNkKlPJe-7ljZIN1mEFyv1_I0L5YfFaprvJLc61KvHb60fnqe9Ufah4aQShUWV11tiRMbCK4H5b92zFIE59fmfmPE4Y0LcCKak1LTh8XNwk8TGB-L0cfA4RB2Yd1qBdfxJSQG_os1_X6uuZVS-LRQEyJLPQ0sZ_5agBaWSAYACiXmXofHcq9eqmKdIq3FCN09OLMUOBGbEHYZc-INutP3356ziSiGJdiCsCjT8JHwX5OI4RT3tIEOP4SCDKHDWQju9Jacm3-A3WTQfTs9eFKdK0jyrEmbI-vjPgGe6I6_QqlkLBptOOG1M5RQtr4U6P6_7iYPRJZBuK-t4NTJTIoMZjoE8jW9HcV2SAS_9cRrw030m01Yr-PgJKAa88sA4bYJY8eQbvYL9ipy2BXMDFg7PsIgSdvvKEuFW7v71uRTLg7iArbfg_-2F1emC6LKK9p_X92UDgwNaEOlvaiHyfN1qtU6ky0qPitZESRo4dSPhGREsZ6Pg71_JX2p9RoHISe6JAovI4a-nmXsRRc1FyYGnxierdv8hd2Ugiq8P1ZaMv8GhUaL9VCh0OqKcMymsn7C0dHWMLoZIvsNG0t4xg6DcJgMm5NTj_KJ9hUyoNq909zLbE1CypYCYNmiSKyASJJY2Ry1IGkIlHF0EgjrrVQdaCHJ1XJ2ScdYc2PfJ9ubLHfd1sTloa-OQHB_AbU8C6CK7JOT3vnuov24VMG9UFEG48E8XD_c5fvSSMER_AtxtehXfBxNG5S1gikLS6e-FcszmW8pSEgGYuTHcfOv3LXhhe_e4NfQgSygkIVm6owqMUrbevraCKMARMde5sTeaw16wv3mXc87w5KuaiSN3JdGzmh70cvKkBoDqneiCPcWp5biKAk7C6DZqsZ1uzI4Zy8EYZ_oGwAFTWEWZ7npwo0C6BUeXUe3GHnuOzD6Z8DWlBcWkoHbu9U624hr9-3wx8KwTC49JYEVcCQ4bd2b-mDGW4WIo2oGH1JaX8K5sM1uGXFEe_BXlCdKXe7LmbYNtltAU1iBYM4QD00G_a1O6-eZKfszNgIQx6Iz_mpVuRYXl8I93efqT5ipszh21wXaHHGAkL8VuLfLwHRVHtl3MP2MTxuCELMTucogt_7Oc11T12WU2DtNvXBtSZT3iBYAPNiDIeKKDWgwflbTsiHdWEAuPWTLWrCIEKztx6RH3tLZqr_W1OBnzRqsL36xqttOROf2pu3UFWMkIqEZwCQ4PWuKV5Rg3Exf31ge4rJQkS4IAE-zMkeTBMYj955MbRZ6ci-Fn-NnzCJcTdoul5kCpgzFxwbK2dGBw6htRWdDVQLzhlKLuSX6kPylnEZmzMLLbzl305Hh_x15wVd1Wod5Asztf07h33ecscrKjvIDrckM1hi-vNFsUOuY_BNvBOxMjnRQ4RhQg_XfPBOiLZKwaJ4g7hgTHn4cK9nWwCJi5JsggtVg1a_eGNpZ7MLMhiH3uth2hIiNAjcs4fkJtdBnep9lUo54i94fDGVwkfga-BV04JU3wo0gRITo2L06m4ulkhglU42JVVtZ_eQI-qxQi1Xz8Run9bxOeOAA9zG6MSuAVNW369x-JxfitWBMqyTDHt3ap55Ot3BhN25Vfgb7ziea8f7LJ-eu216w3rftfezQD0O9xNup4Zl78L7xxgBvyn1fakTmQ8AsvdYziQn5c5QbiRagg7a9QrBobAuZplRtCEwgsF5SJKDSnNxhIFTsIhBdk5WFTKuwG_cZn4skEyKkq9qTVJh3SOr21tPBta5OD5BYTE9wQa0QPuBgBXTa2ncj5YUoZQt9lQJNPIsk5C7OygbBc9IXn518LiI17T-6j5lwlG0VblqftGJC7EsdGmK4ALVZf2d0IC3JUrsEafnnw4hEfYS_giXMUXEjmFB_GDMuv6y-j-NjmD3pmoqAfQyaU3B_RQJPSZ5-79-FbBxRjm-7Hyvt6VHeFAtWAhoDS5RJbU1gUhovMFvwFbxEfPVxROJqsczfMX2w8tBEFz45JXiMzU_mkmc1uy1NZ9jqs2vZQ18a9C2PvaXVpc35ntw4y6PeU1_-nswQMUO1b4bNv2DZfSNhT7gVNxN5wtHwdv-znYZBjhlqlt5XVCFQRpPhEqBI5TSOhDWobhriFK-ZBQJkmtgfdagxRyBeBVFOjyFblB53j8_-lTk0yx9WvlDs4_q-VQUndYTQ-WdBuwm2dY6jx0jCnjhPiMgvcruPR-wQPv_NMkxmbsSrRrK7eykPr9BgyYHCEm-y4n7F_nra9fJhLffYo08kDh33r_iC3XSa4zR7NlwSzCFdcwxBZzrnXk_5tlTdnubIzy4yhPuBCyxvHyC4n3_TP1g61GASPP_ef5HBGQu6pBOsaCo9x9jocJNlAMu9pdi6-9TCSmNcuKlT9ELOtfoSriSJ8fNjfBFkkk8tZf-fOy7xwCb-iKfnd-LBurdopiDZy3ZKO_Fco0ppVZntV30PFbkl-tj5zlHyEguLh8U_pk6_TtOAjLtAl80V11XRjXnFNZ3NMjmLvvLZjlrV2hTbxlf9gGj5uv5Qh5hETFpnXR8juJyuZqopo0s5ndYP_0G
' URL: http://www.plantuml.com/plantuml/uml/rLbPRnit47xtho0Qe5XN1soZGG4X3Qf8ShA1PBkItBGD0eFUfINMk-IMvFfeclps3haNkKlPJe-7ljZIN1mEFyv1_I0L5YfFaprvJLc61KvHb60fnqe9Ufah4aQShUWV11tiRMbCK4H5b92zFIE59fmfmPE4Y0LcCKak1LTh8XNwk8TGB-L0cfA4RB2Yd1qBdfxJSQG_os1_X6uuZVS-LRQEyJLPQ0sZ_5agBaWSAYACiXmXofHcq9eqmKdIq3FCN09OLMUOBGbEHYZc-INutP3356ziSiGJdiCsCjT8JHwX5OI4RT3tIEOP4SCDKHDWQju9Jacm3-A3WTQfTs9eFKdK0jyrEmbI-vjPgGe6I6_QqlkLBptOOG1M5RQtr4U6P6_7iYPRJZBuK-t4NTJTIoMZjoE8jW9HcV2SAS_9cRrw030m01Yr-PgJKAa88sA4bYJY8eQbvYL9ipy2BXMDFg7PsIgSdvvKEuFW7v71uRTLg7iArbfg_-2F1emC6LKK9p_X92UDgwNaEOlvaiHyfN1qtU6ky0qPitZESRo4dSPhGREsZ6Pg71_JX2p9RoHISe6JAovI4a-nmXsRRc1FyYGnxierdv8hd2Ugiq8P1ZaMv8GhUaL9VCh0OqKcMymsn7C0dHWMLoZIvsNG0t4xg6DcJgMm5NTj_KJ9hUyoNq909zLbE1CypYCYNmiSKyASJJY2Ry1IGkIlHF0EgjrrVQdaCHJ1XJ2ScdYc2PfJ9ubLHfd1sTloa-OQHB_AbU8C6CK7JOT3vnuov24VMG9UFEG48E8XD_c5fvSSMER_AtxtehXfBxNG5S1gikLS6e-FcszmW8pSEgGYuTHcfOv3LXhhe_e4NfQgSygkIVm6owqMUrbevraCKMARMde5sTeaw16wv3mXc87w5KuaiSN3JdGzmh70cvKkBoDqneiCPcWp5biKAk7C6DZqsZ1uzI4Zy8EYZ_oGwAFTWEWZ7npwo0C6BUeXUe3GHnuOzD6Z8DWlBcWkoHbu9U624hr9-3wx8KwTC49JYEVcCQ4bd2b-mDGW4WIo2oGH1JaX8K5sM1uGXFEe_BXlCdKXe7LmbYNtltAU1iBYM4QD00G_a1O6-eZKfszNgIQx6Iz_mpVuRYXl8I93efqT5ipszh21wXaHHGAkL8VuLfLwHRVHtl3MP2MTxuCELMTucogt_7Oc11T12WU2DtNvXBtSZT3iBYAPNiDIeKKDWgwflbTsiHdWEAuPWTLWrCIEKztx6RH3tLZqr_W1OBnzRqsL36xqttOROf2pu3UFWMkIqEZwCQ4PWuKV5Rg3Exf31ge4rJQkS4IAE-zMkeTBMYj955MbRZ6ci-Fn-NnzCJcTdoul5kCpgzFxwbK2dGBw6htRWdDVQLzhlKLuSX6kPylnEZmzMLLbzl305Hh_x15wVd1Wod5Asztf07h33ecscrKjvIDrckM1hi-vNFsUOuY_BNvBOxMjnRQ4RhQg_XfPBOiLZKwaJ4g7hgTHn4cK9nWwCJi5JsggtVg1a_eGNpZ7MLMhiH3uth2hIiNAjcs4fkJtdBnep9lUo54i94fDGVwkfga-BV04JU3wo0gRITo2L06m4ulkhglU42JVVtZ_eQI-qxQi1Xz8Run9bxOeOAA9zG6MSuAVNW369x-JxfitWBMqyTDHt3ap55Ot3BhN25Vfgb7ziea8f7LJ-eu216w3rftfezQD0O9xNup4Zl78L7xxgBvyn1fakTmQ8AsvdYziQn5c5QbiRagg7a9QrBobAuZplRtCEwgsF5SJKDSnNxhIFTsIhBdk5WFTKuwG_cZn4skEyKkq9qTVJh3SOr21tPBta5OD5BYTE9wQa0QPuBgBXTa2ncj5YUoZQt9lQJNPIsk5C7OygbBc9IXn518LiI17T-6j5lwlG0VblqftGJC7EsdGmK4ALVZf2d0IC3JUrsEafnnw4hEfYS_giXMUXEjmFB_GDMuv6y-j-NjmD3pmoqAfQyaU3B_RQJPSZ5-79-FbBxRjm-7Hyvt6VHeFAtWAhoDS5RJbU1gUhovMFvwFbxEfPVxROJqsczfMX2w8tBEFz45JXiMzU_mkmc1uy1NZ9jqs2vZQ18a9C2PvaXVpc35ntw4y6PeU1_-nswQMUO1b4bNv2DZfSNhT7gVNxN5wtHwdv-znYZBjhlqlt5XVCFQRpPhEqBI5TSOhDWobhriFK-ZBQJkmtgfdagxRyBeBVFOjyFblB53j8_-lTk0yx9WvlDs4_q-VQUndYTQ-WdBuwm2dY6jx0jCnjhPiMgvcruPR-wQPv_NMkxmbsSrRrK7eykPr9BgyYHCEm-y4n7F_nra9fJhLffYo08kDh33r_iC3XSa4zR7NlwSzCFdcwxBZzrnXk_5tlTdnubIzy4yhPuBCyxvHyC4n3_TP1g61GASPP_ef5HBGQu6pBOsaCo9x9jocJNlAMu9pdi6-9TCSmNcuKlT9ELOtfoSriSJ8fNjfBFkkk8tZf-fOy7xwCb-iKfnd-LBurdopiDZy3ZKO_Fco0ppVZntV30PFbkl-tj5zlHyEguLh8U_pk6_TtOAjLtAl80V11XRjXnFNZ3NMjmLvvLZjlrV2hTbxlf9gGj5uv5Qh5hETFpnXR8juJyuZqopo0s5ndYP_0G
' Generated on: 2025-11-24T17:21:20.283166

@startuml
skinparam classAttributeIconSize 0
hide circle

class ControllerMandelbrotTest {
  +modelDelegationFromUiActions(): void
}

class FakeModel {
  ~storedIterations: int
  ~iterationsCalls: int
  ~panCalls: int
  ~lastPanReal: double
  ~lastPanImag: double
  ~colourMapCalls: int
  ~colourMap: String = super.getColorMapName()
  --
  ~FakeModel()
  +setMaxIterations(maxIterations: int): void
  +getMaxIterations(): int
  +pan(deltaReal: double, deltaImag: double): void
  +setColorMapName(name: String): void
  +getColorMapName(): String
  ~resetCallCounts(): void
}

class ModelMandelbrotTest {
  -model: ModelMandelbrot
  -listener: RecordingListener
  -{static} EPSILON: double = 2e-14
  --
  +testResetRestoresInitialValues(): void
  +testUndoRedoStacks(): void
  +testSaveAndLoadRoundTrip(): void
  +testLoadFromFileRejectsMalformedData(): void
  +testSetColorMapNameNullResetsToDefault(): void
  +testListenersAreNotifiedOnStateChanges(): void
}

class RecordingListener {
  ~count: int = 0
  --
  +modelChanged(): void
}

class ViewMandelbrotTest {
  +blueColourMapProducesGradient(): void
  +blueColourMapHandlesZeroMaxIterations(): void
}

class ControllerMandelbrot {
  -model: ModelMandelbrot
  -panel: MandelbrotPanel
  -iterationSpinner: JSpinner
  -resetButton: JButton
  -undoButton: JButton
  -redoButton: JButton
  -saveButton: JButton
  -loadButton: JButton
  -colourMapCombo: JComboBox<String>
  -fileChooser: JFileChooser = new JFileChooser()
  -colourMaps: Map<String, ColourMap> = new LinkedHashMap<>()
  -updatingColourMapSelection: boolean = false
  -updatingIterationSpinner: boolean = false
  -dragStart: Point
  -dragEnd: Point
  -isPanning: boolean = false
  --
  +ControllerMandelbrot(model: ModelMandelbrot, panel: MandelbrotPanel, iterationSpinner: JSpinner, resetButton: JButton, undoButton: JButton, redoButton: JButton, saveButton: JButton, loadButton: JButton, colourMapCombo: JComboBox<String>)
  +mousePressed(e: MouseEvent): void
  +mouseDragged(e: MouseEvent): void
  +mouseReleased(e: MouseEvent): void
  -createRectangle(p1: Point, p2: Point): Rectangle
  -applyZoom(r: Rectangle): void
  -applyPan(start: Point, end: Point): void
  +stateChanged(e: javax.swing.event.ChangeEvent): void
  +actionPerformed(e: java.awt.event.ActionEvent): void
  -handleSave(): void
  -handleLoad(): void
  -showError(message: String, ex: Exception): void
  -initializeColourMaps(): void
  -addColourMap(colourMap: ColourMap): void
  -handleColourMapSelection(): void
  -applyColourMap(name: String): void
  -setIterationSpinnerValue(value: int): void
  +mouseMoved(e: MouseEvent): void
  +mouseClicked(e: MouseEvent): void
  +mouseEntered(e: MouseEvent): void
  +mouseExited(e: MouseEvent): void
}

interface ModelListener {
  ~modelChanged(): void
}

class ModelMandelbrot {
  -{static} DEFAULT_COLOR_MAP: String = "Black & White"
  +{static} MIN_ITERATIONS: int = 10
  +{static} MAX_ITERATIONS: int = 5000
  -minReal: double
  -maxReal: double
  -minImag: double
  -maxImag: double
  -maxIterations: int
  -radiusSquared: double
  -width: int
  -height: int
  -colorMapName: String = DEFAULT_COLOR_MAP
  -data: int
  -calculator: MandelbrotCalculator
  -listeners: List<ModelListener> = new ArrayList<>()
  -undoStack: Deque<MandelbrotState> = new ArrayDeque<>()
  -redoStack: Deque<MandelbrotState> = new ArrayDeque<>()
  --
  +ModelMandelbrot(width: int, height: int)
  +recalculate(): void
  +getData(): int[][]
  +getWidth(): int
  +getHeight(): int
  +getMinReal(): double
  +getMaxReal(): double
  +getMinImag(): double
  +getMaxImag(): double
  +getMaxIterations(): int
  +getRadiusSquared(): double
  +getColorMapName(): String
  +getMagnification(): double
  +setMaxIterations(maxIterations: int): void
  +setViewWindow(minReal: double, maxReal: double, minImag: double, maxImag: double): void
  +reset(): void
  +pan(deltaReal: double, deltaImag: double): void
  -pushStateToUndo(): void
  +canUndo(): boolean
  +canRedo(): boolean
  +undo(): void
  +redo(): void
  -pushStateToUndoWithoutClearingRedo(): void
  +saveToFile(file: File): void
  +loadFromFile(file: File): void
  +setColorMapName(colorMapName: String): void
  -normalizeColourMapName(colorMapName: String): String
  -readDouble(props: Properties, key: String): double
  -readInt(props: Properties, key: String): int
  -validateIterations(iterations: int): void
  -validateViewWindow(minReal: double, maxReal: double, minImag: double, maxImag: double): void
  +addListener(listener: ModelListener): void
  +removeListener(listener: ModelListener): void
  -notifyListeners(): void
}

class MandelbrotCalculator {
  #{static} INITIAL_MIN_REAL: double = -2.0
  #{static} INITIAL_MAX_REAL: double = 0.7
  #{static} INITIAL_MIN_IMAGINARY: double = -1.25
  #{static} INITIAL_MAX_IMAGINARY: double = 1.25
  #{static} INITIAL_MAX_ITERATIONS: int = 50
  #{static} DEFAULT_RADIUS_SQUARED: double = 4.0
  --
  -calcMandel(cReal: double, cImaginary: double, maxIterations: int, radiusSquared: double): int
  +calcMandelbrotSet(xResolution: int, yResolution: int, minReal: double, maxReal: double, minImaginary: double, maxImaginary: double, maxIterations: int, radiusSquared: double): int[][]
}

class MandelbrotState {
  +minReal: double
  +maxReal: double
  +minImag: double
  +maxImag: double
  +maxIterations: int
  --
  +MandelbrotState(minReal: double, maxReal: double, minImag: double, maxImag: double, maxIterations: int)
}

class BlackWhiteColourMap {
  +getName(): String
  +map(iterations: int, maxIterations: int): Color
}

interface ColourMap {
  ~getName(): String
  ~map(iterations: int, maxIterations: int): Color
}

class BlueColourMap {
  +getName(): String
  +map(iterations: int, maxIterations: int): Color
}

class ControlPanelMandelbrot {
  -iterationSpinner: JSpinner
  -resetButton: JButton
  -undoButton: JButton
  -redoButton: JButton
  -saveButton: JButton
  -loadButton: JButton
  -colourMapCombo: JComboBox<String>
  --
  +ControlPanelMandelbrot(initialIterations: int)
  +getIterationSpinner(): JSpinner
  +getResetButton(): JButton
  +getUndoButton(): JButton
  +getRedoButton(): JButton
  +getSaveButton(): JButton
  +getLoadButton(): JButton
  +getColourMapCombo(): JComboBox<String>
}

class MandelbrotApp {
  +{static} main(args: String[]): void
}

class MandelbrotPanel {
  -model: ModelMandelbrot
  -dragStart: Point
  -dragEnd: Point
  -colourMap: ColourMap = new BlackWhiteColourMap()
  --
  +MandelbrotPanel(model: ModelMandelbrot)
  +setDragStart(p: Point): void
  +setDragEnd(p: Point): void
  #paintComponent(g: Graphics): void
  +modelChanged(): void
  +setColourMap(colourMap: ColourMap): void
  +getColourMap(): ColourMap
}

class UIStyler {
  +{static} styleButton(button: JButton): void
  +{static} styleResetButton(button: JButton): void
  +{static} styleUndoButton(button: JButton): void
  +{static} styleRedoButton(button: JButton): void
  +{static} stylePanel(panel: JPanel): void
}

FakeModel --|> ModelMandelbrot
ModelMandelbrotTest *-- ModelMandelbrot
ModelMandelbrotTest *-- RecordingListener
RecordingListener ..|> ModelListener
ControllerMandelbrot *-- ModelMandelbrot
ControllerMandelbrot *-- MandelbrotPanel
ControllerMandelbrot o-- ColourMap
ModelMandelbrot *-- MandelbrotCalculator
ModelMandelbrot o-- ModelListener
ModelMandelbrot o-- MandelbrotState
BlackWhiteColourMap ..|> ColourMap
BlueColourMap ..|> ColourMap
MandelbrotPanel ..|> ModelListener
MandelbrotPanel *-- ModelMandelbrot
MandelbrotPanel *-- ColourMap
@enduml